# OptimalControl

./: .gitignore  CMakeLists.txt
Configurations/Map1/: Cords.txt  Example1.yaml  Example10.yaml  Example11.yaml  Example12.yaml  Example13.yaml  Example2.yaml  Example3.yaml  Example4.yaml  Example5.yaml  Example6.yaml  Example7.yaml  Example8.yaml  Example9.yaml  SELQR.txt  WinsrSELQRChol.txt  callgrind.out.12014  callgrind.out.12108  iQRLQR.txt  iQRSELQR.txt  map1.yaml
Configurations/Map2/: Example1.yaml  Example2.yaml  Example3.yaml  Example4.yaml  Example5.yaml  Frobenius.txt  RSELQR.txt  SELQR.txt  SELQR_log.txt  iQRLQR_log.txt  iQRLQR_mat.txt  iRSELQR_log.txt  map2.yaml  rLQR.txt
Configurations/Map3/: Example1.yaml  Example2.yaml  Example3.yaml  Frobenius.txt  RSELQR.txt  SELQR.txt  map3.yaml  rLQR.txt
Configurations/Quadrotor/: QR.txt  QR_GAUSS1.txt  SELQR1503423184.txt  SELQR1503549301.txt  SELQR1563145341.txt  iQRSELQR1503423184.txt  map1.yaml
Scripts/: armadilloDebugHelpers.py
Scripts/Matlab/: draw_from_ellipsoid.m
Scripts/Plots/: BoxPlotDeltas.py  BoxPlotQuad.py  BoxPlotSELQR.py  FourPaths.py  Maps.py  Path.py  PlotRadius.py  QuadStadistics.py  Quadrotor.py  SigmaPoints.py
Scripts/Stadistics/: SELQRStatsPath.py
Tests/: CMakeLists.txt
Tests/CostFunctions/: CMakeLists.txt  Obstacles.cpp  Quadratic.cpp  SystemCost.cpp
Tests/Interfaces/Quadrotor/: main.cpp  robotcontroller.cpp  robotcontroller.hpp  scenemodifier.cpp  scenemodifier.h
Tests/LQR/: CMakeLists.txt  Comparation.cpp  QRSELQR.cpp  QRSELQR_samplings.cpp  Quadroptor_simple.cpp  Quadrotor.cpp  SELQR.cpp
Tests/Parallel/: CMakeLists.txt  Regression.cpp  TBB1.cpp
Tests/Regression/: CMakeLists.txt  LQ.cpp  Quadratic.cpp  SigmaPoints.cpp
Tests/Time/: CMakeLists.txt  CholTime.cpp
include/Cost/: BasicSystemCost.hpp  Functor.hpp  Obstacle.hpp  ObstacleCost.hpp  QuadObstacleCost.hpp  QuadraticCost.hpp  SystemCost.hpp
include/LQR/: BasicLQR.hpp  SELQR.hpp  iLQR.hpp  iQRLQR.hpp  iQRSELQR.hpp
include/Regression/: QuadraticRegression.hpp  SigmaPoints.hpp
include/System/: BasicSystem.hpp  DDR.hpp  DDRPolar.hpp  Quadrotor.hpp
include/Utils/: SystemParameters.hpp  Utils.hpp
